--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fs-extra": "^0.26.7",
-    "npm-programmatic": "0.0.5"
+    "npm-programmatic": "0.0.5",
+    "url-join": "2.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
