--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mockery": "^1.7.0",
     "serverless": "^1.0.0-beta.2",
     "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "webpack": "1.15.0"
   },
   "peerDependencies": {
     "webpack": "*"
